--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -36,17 +36,17 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box{
+.logo-box {
   position: absolute;
   top: 40px;
   left: 40px;
 }
 
-.logo{
+.logo {
   height: 40px;
 }
 
-.text-box{
+.text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -54,22 +54,59 @@ body {
   text-align: center;
 }
 
-.heading-primary{
+.heading-primary {
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 60px;
+  backface-visibility: hidden;
 }
 
-.heading-primary-main{
+.heading-primary-main {
   display: block;
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+
+  /* 
+  animation-iteration-count: 3;
+  animation-delay: 1s; 
+  */
 }
 
-.heading-primary-sub{
+.heading-primary-sub {
   display: block;
-   font-size: 20px;
+  font-size: 20px;
   font-weight: 400;
   letter-spacing: 17.4px;
+  animation: moveInRight 1s ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  80% {
+    transform: translateX(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
