--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -79,7 +79,7 @@ body {
 .heading-primary-sub {
   display: block;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 17.4px;
   animation: moveInRight 1s ease-out;
 }
@@ -112,6 +112,17 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -121,14 +132,15 @@ body {
   border-radius: 100px;
   cursor: pointer;
   transition: all 0.2s;
+  position: relative;
 }
 
-.btn:hover{
+.btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
-.btn:active{
+.btn:active {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -136,4 +148,31 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn-white::after{
+  background-color: #fff;
+}
+
+.btn:hover::after{
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated{
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards;
 }
