--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -16,7 +16,14 @@
   transform: skewY(-7deg);
   margin-top: -10rem;
 
+  //Chọn ra con trực tiếp và xuất hiện đầu tiên
   & > * {
     transform: skewY(7deg);
   }
+}
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
 }
