--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     display: inline-block;
@@ -10,6 +11,8 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -22,7 +25,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
@@ -64,9 +69,9 @@
   }
 }
 
-.btn-text{
+.btn-text {
   &:link,
-  &:visited{
+  &:visited {
     font-size: $default-font-size;
     color: $color-primary;
     display: inline-block;
@@ -76,14 +81,14 @@
     transition: all 0.5s;
   }
 
-  &:hover{
+  &:hover {
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
     transform: translateY(-2px);
   }
 
-  &:active{
+  &:active {
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
     transform: translateY(0);
   }
