--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -14,6 +14,7 @@
     border-bottom: 3px solid transparent;
     width: 90%;
     display: block;
+    transition: all 0.3s;
 
     &:focus {
       outline: none;
@@ -43,5 +44,50 @@
     opacity: 0;
     visibility: hidden;
     transform: translateY(-4rem);
+  }
+
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio-input {
+    display: none;
+  }
+
+  &__radio-label {
+    font-size: $default-font-size;
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
+
+  &__radio-button{
+    display: inline-block;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    border: 5px solid $color-primary;
+    position: absolute;
+    left: 0;
+    top: -0.5rem;
+
+    &::after{
+      position: absolute;
+      content: "";
+      left: 50%;
+      top: 50%;
+      height: 1.3rem;
+      width: 1.3rem;
+      transform: translate(-50%, -50%);
+      background-color: $color-primary;
+      border-radius: 50%;
+      opacity: 0;
+      transition: opacity 0.2s;
+    }
+  }
+
+  &__radio-input:checked ~ &__radio-label &__radio-button::after{
+    opacity: 1;
   }
 }
