--- a/Natours/sass/layout/_navigation.scss
+++ b/Natours/sass/layout/_navigation.scss
@@ -11,6 +11,7 @@
     background-color: $color-white;
     top: 6rem;
     right: 6rem;
+    box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
     z-index: 2000;
   }
 
@@ -25,17 +26,20 @@
     );
     top: 6.5rem;
     right: 6.5rem;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     z-index: 1000;
-    transform: scale(80);
+    // transform: scale(80);
   }
 
   &__nav {
     height: 100vh;
-    width: 100%;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
     z-index: 1500;
+    opacity: 0;
+    width: 0;
+    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
   &__list {
@@ -45,6 +49,7 @@
     transform: translate(-50%, -50%);
     text-align: center;
     list-style: none;
+    width: 100%;
   }
 
   &__item {
@@ -82,5 +87,14 @@
       color: $color-primary;
       transform: translateX(1rem);
     }
+  }
+
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
   }
 }
