--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -6,6 +6,9 @@
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
 
   &__content {
     @include absCenter;
@@ -16,6 +19,9 @@
     border-radius: 5px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all 0.5s 0.2s;
   }
 
   &__left {
@@ -51,5 +57,35 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content{
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+
+  &__close{
+    transition: all 0.3s;
+
+    &:link,
+    &:visited{
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2rem;
+      right: 2.5rem;
+      font-size: 3.5rem;
+      text-decoration: none;
+      display: inline-block;
+      line-height: 1;
+    }
+
+    &:hover, &:active{
+      color: $color-primary;
+    }
   }
 }
