--- a/Natours/sass/layout/_footer.scss
+++ b/Natours/sass/layout/_footer.scss
@@ -4,6 +4,10 @@
   padding: 10rem 0;
   color: $color-grey-light-1;
 
+  @include responsive(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
@@ -18,6 +22,11 @@
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
+
+    @include responsive(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -50,10 +59,16 @@
     }
   }
 
-  &__copyright{
+  &__copyright {
     border-top: 1px solid $color-grey-dark;
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include responsive(tab-port) {
+      width: 100%;
+      text-align: center;
+      float: none;
+    }
   }
 }
