--- a/Natours/sass/layout/_grid.scss
+++ b/Natours/sass/layout/_grid.scss
@@ -4,7 +4,16 @@
 
   &:not(:last-child) {
     margin-bottom: $gutter-vertical;
+
+    @include responsive(tab-port) {
+      margin-bottom: $gutter-vertical-small;
+    }
   }
+
+  @include responsive(tab-port) {
+    max-width: 50rem;
+    padding: 0 3rem;
+  } 
 
   @include clearfix;
 
@@ -16,6 +25,15 @@
 
     &:not(:last-child) {
       margin-right: $gutter-horizontal;
+
+      @include responsive(tab-port) {
+        margin-right: 0;
+        margin-bottom: $gutter-vertical-small;
+      }
+    }
+
+    @include responsive(tab-port) {
+      width: 100% !important;
     }
   }
 
@@ -28,7 +46,9 @@
   }
 
   .col-2-of-3 {
-    width: calc( 2 * ((100% - #{$gutter-horizontal} * 2) / 3) + #{$gutter-horizontal});
+    width: calc(
+      2 * ((100% - #{$gutter-horizontal} * 2) / 3) + #{$gutter-horizontal}
+    );
   }
 
   .col-1-of-4 {
@@ -36,10 +56,14 @@
   }
 
   .col-2-of-4 {
-    width: calc( 2 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal});
+    width: calc(
+      2 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal}
+    );
   }
 
   .col-3-of-4 {
-    width: calc( 3 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal} * 2);
+    width: calc(
+      3 * ((100% - #{$gutter-horizontal} * 3) / 4) + #{$gutter-horizontal} * 2
+    );
   }
 }
