--- a/Natours/sass/base/_utilities.scss
+++ b/Natours/sass/base/_utilities.scss
@@ -8,14 +8,22 @@
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
+
+  @include responsive(tab-port) {
+    margin-bottom: 3rem !important;
+  }
 }
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
+
+  @include responsive(tab-port) {
+    margin-bottom: 5rem !important;
+  }
 }
 
 .u-margin-top-big {
-  margin-top: 8rem !important;
+  margin-top: 8rem !important;  
 }
 
 .u-margin-top-huge {
