--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -10,30 +10,63 @@
     outline-offset: 2rem;
     border-radius: 2px;
 
+    @include responsive(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33333333%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
+    }
+
     &--p1 {
       left: 0;
       top: -2rem;
+
+      @include responsive(tab-port) {
+        top: 0;
+        transform: scale(1.1);
+      }
     }
 
     &--p2 {
       right: 0;
       top: 2rem;
+
+      @include responsive(tab-port) {
+        top: -1rem;
+        transform: scale(1.15);
+        z-index: 100;
+      }
     }
 
     &--p3 {
       left: 20%;
       top: 10rem;
+
+      @include responsive(tab-port) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
       outline: 1.5rem solid $color-primary;
       transform: scale(1.05) translateY(-0.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
-      z-index: 20;
+      z-index: 500;
+
+      @include responsive(tab-port) {
+        outline: 1.3rem solid $color-primary;
+        transform: scale(1.2) translateY(-0.5rem);
+      }
     }
   }
 
   &:hover &__photo:not(:hover) {
     transform: scale(0.95);
+
+    @include responsive(tab-port) {
+      transform: scale(1);
+    }
   }
 }
