Section 6: Writing Media Queries - Tours, Stories and Booking Sections

--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -9,6 +9,16 @@
   font-size: $default_font_size;
   transform: skewX(-12deg);
 
+  @include responsive(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include responsive(phone) {
+    transform: skewX(0);
+  }
+
   &__shape {
     width: 15rem;
     height: 15rem;
@@ -19,6 +29,10 @@
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
     position: relative;
+
+    @include responsive(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
   }
 
   &__image {
@@ -30,6 +44,10 @@
 
   &__text {
     transform: skewX(12deg);
+
+    @include responsive(phone) {
+      transform: skewX(0);
+    }
   }
 
   &__caption {
@@ -51,7 +69,7 @@
     opacity: 1;
   }
 
-  &:hover &__image{
+  &:hover &__image {
     transform: translateX(-4rem) scale(1);
     filter: blur(3px) brightness(80%);
   }
