--- a/Natours/sass/components/_form.scss
+++ b/Natours/sass/components/_form.scss
@@ -16,6 +16,10 @@
     display: block;
     transition: all 0.3s;
 
+    @include responsive(tab-port) {
+      width: 100%;
+    }
+
     &:focus {
       outline: none;
       box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
@@ -49,6 +53,12 @@
   &__radio-group {
     width: 49%;
     display: inline-block;
+
+    @include responsive(tab-port) {
+      display: block;
+      width: 100%;
+      margin-bottom: 2rem;
+    }
   }
 
   &__radio-input {
@@ -62,7 +72,7 @@
     padding-left: 4.5rem;
   }
 
-  &__radio-button{
+  &__radio-button {
     display: inline-block;
     height: 3rem;
     width: 3rem;
@@ -72,7 +82,7 @@
     left: 0;
     top: -0.5rem;
 
-    &::after{
+    &::after {
       position: absolute;
       content: "";
       left: 50%;
@@ -87,7 +97,7 @@
     }
   }
 
-  &__radio-input:checked ~ &__radio-label &__radio-button::after{
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
 }
