--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -14,6 +14,7 @@
     width: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden;
 
