--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -185,7 +185,9 @@
     font-weight: 100;
   }
 
-  @include responsive(tab-port) {
+  // @include responsive(tab-port) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+    
     height: auto;
     border-radius: 3px;
     background-color: $color-white;
