--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -94,13 +94,40 @@ body {
     cursor: pointer; }
 
 .user-nav {
-  background-color: yellow; }
+  display: flex;
+  align-items: center;
+  align-self: stretch; }
+  .user-nav > * {
+    padding: 0 2rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    height: 100%; }
+  .user-nav > *:hover {
+    background-color: var(--color-grey-light-2); }
+  .user-nav__icon-box {
+    position: relative; }
   .user-nav__icon {
     height: 2.25rem;
-    width: 2.25rem; }
+    width: 2.25rem;
+    fill: var(--color-grey-dark-2); }
+  .user-nav__notification {
+    font-size: 0.8rem;
+    height: 1.75rem;
+    width: 1.75rem;
+    border-radius: 50%;
+    background-color: var(--color-primary);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 1.5rem;
+    right: 1.1rem; }
   .user-nav__user-photo {
     height: 3.5rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1rem; }
 
 .container {
   max-width: 120rem;
@@ -126,5 +153,5 @@ body {
   flex: 0 0 18%; }
 
 .hotel-view {
-  background-color: #fff;
+  background-color: red;
   flex: 1; }
