--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -23,9 +23,13 @@
 .sidebar{
   background-color: var(--color-grey-dark-1);
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view{
-  background-color:red;
   flex: 1;
+  background-color:red;
+  height: 80rem;
 }
