--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -173,6 +173,21 @@ body {
   text-align: center;
   padding: 2.5rem; }
 
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -201,5 +216,4 @@ body {
 
 .hotel-view {
   flex: 1;
-  background-color: red;
   height: 80rem; }
